--- a/attendees.ipynb
+++ b/attendees.ipynb
@@ -1,230 +1,264 @@
 {
- "cells": [
-   {
-    "cell_type": "markdown",
-    "metadata": {
-      "id": "view-in-github",
-      "colab_type": "text"
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pVWyPQEpszj8"
+      },
+      "source": [
+        "# Attendee counter\n",
+        "Notebook to count attendees during a live session in DTW 2024."
+      ]
     },
-    "source": [
-      "<a href=\"https://colab.research.google.com/github/cermegno/my-computer-vision/blob/main/attendees.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Attendee counter"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Grab YOLO model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Install Yolo\n",
+        "Start by installing the Python library Ultralytics"
+      ],
+      "metadata": {
+        "id": "OYi71Y0DtL3V"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%pip install ultralytics"
+      ],
+      "metadata": {
+        "id": "nyG3ukgutQF7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Import it"
+      ],
+      "metadata": {
+        "id": "--cJnkPd3vIe"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import ultralytics\n",
+        "ultralytics.checks()"
+      ],
+      "metadata": {
+        "id": "l0ygNQgLt6kx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KKeEgRy6szj-"
+      },
+      "source": [
+        "### Grab YOLO model\n",
+        "Grab it and show the details of the model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "kg9SpheQdIOB"
+      },
+      "outputs": [],
+      "source": [
+        "from ultralytics import YOLO\n",
+        "model = YOLO(\"yolo11l.pt\")\n",
+        "model.info()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RrQLT6irszkA"
+      },
+      "source": [
+        "### Show image to analyze"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "pXva5qNUhBC9"
+      },
+      "outputs": [],
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(filename='image.jpg')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uWbCjqQSszkB"
+      },
+      "source": [
+        "### Analyze image\n",
+        "Rename the file name to much your image."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "POOBchi9d2rs"
+      },
+      "outputs": [],
+      "source": [
+        "results = model.predict(\"image.jpg\", save=True)\n",
+        "result = results[0]\n",
+        "result"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zK5fdruKszkC"
+      },
+      "source": [
+        "### Show analyzed image\n",
+        "The resulting image is saved in 'runs/detect/predict'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "FbwSLHQchOy2"
+      },
+      "outputs": [],
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(filename='runs/detect/predict/image.jpg')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The details of the detect objects are in \"boxes\". Let's see how many objects have been detected. It doesn't include just \"person\". The COCO dataset has 80 labels in total"
+      ],
+      "metadata": {
+        "id": "hOHwy8smzKR3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_43UkWGbe94x"
+      },
+      "outputs": [],
+      "source": [
+        "len(result.boxes)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examine the details of each box"
+      ],
+      "metadata": {
+        "id": "35Q0jSpD2QQY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "B5RJ8E3zfV-S"
+      },
+      "outputs": [],
+      "source": [
+        "for box in result.boxes:\n",
+        "  class_id = result.names[box.cls[0].item()]\n",
+        "  cords = box.xyxy[0].tolist()\n",
+        "  cords = [round(x) for x in cords]\n",
+        "  conf = round(box.conf[0].item(), 2)\n",
+        "  print(\"Object type:\", class_id)\n",
+        "  print(\"Coordinates:\", cords)\n",
+        "  print(\"Probability:\", conf)\n",
+        "  print(\"---\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y9cXysBOszkE"
+      },
+      "source": [
+        "### Count the amount of people in the image\n",
+        "Person is number \"0\" in the COCO dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "QKiyGYRff6OT"
+      },
+      "outputs": [],
+      "source": [
+        "num_attendees = 0\n",
+        "for box in result.boxes:\n",
+        "  #print(int(box.cls[0].item()))\n",
+        "  if int(box.cls[0].item()) == 0:\n",
+        "    num_attendees += 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "yQvFgaAqszkF"
+      },
+      "outputs": [],
+      "source": [
+        "from IPython.display import Markdown, display\n",
+        "display(Markdown(\"# Number of people: \" + str(num_attendees)))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7hpKOBjTszkF"
+      },
+      "source": [
+        "<div class=\"alert alert-block alert-info\">\n",
+        "<H3>Thanks for joining our session. Enjoy DTW 2024!!</div>"
+      ]
+    }
+  ],
+  "metadata": {
     "colab": {
-     "base_uri": "https://localhost:8080/"
+      "provenance": []
     },
-    "id": "kg9SpheQdIOB",
-    "outputId": "5f0189f0-bd00-4f71-88a6-3920252135cc"
-   },
-   "outputs": [],
-   "source": [
-    "from ultralytics import YOLO\n",
-    "model = YOLO(\"./yolov8m.pt\")\n",
-    "model.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Show image to analyze"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 432
+    "kernelspec": {
+      "display_name": "Python 3 (ipykernel)",
+      "language": "python",
+      "name": "python3"
     },
-    "id": "pXva5qNUhBC9",
-    "outputId": "957c8893-d4a3-4b4a-fa59-1c99f4a61e6b"
-   },
-   "outputs": [],
-   "source": [
-    "from IPython.display import Image\n",
-    "Image(filename='image.jpg')"
-   ]
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.12"
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Analyze image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "POOBchi9d2rs",
-    "outputId": "4cd615cb-dda3-4a97-bda1-aa13a6154c0f"
-   },
-   "outputs": [],
-   "source": [
-    "results = model.predict(\"image.jpg\", save=True)\n",
-    "result = results[0]\n",
-    "result"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Show analyzed image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 432
-    },
-    "id": "FbwSLHQchOy2",
-    "outputId": "c823e2e1-b722-403f-f7bc-16e7d87d4cf9"
-   },
-   "outputs": [],
-   "source": [
-    "from IPython.display import Image\n",
-    "Image(filename='runs/detect/predict/image.jpg')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "_43UkWGbe94x",
-    "outputId": "7443d84f-15e1-4d5f-8cb1-44f90e251f99"
-   },
-   "outputs": [],
-   "source": [
-    "len(result.boxes)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Show prediction details"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "B5RJ8E3zfV-S",
-    "outputId": "eb20339c-354c-4606-e8cc-180b3a15162b"
-   },
-   "outputs": [],
-   "source": [
-    "for box in result.boxes:\n",
-    "  class_id = result.names[box.cls[0].item()]\n",
-    "  cords = box.xyxy[0].tolist()\n",
-    "  cords = [round(x) for x in cords]\n",
-    "  conf = round(box.conf[0].item(), 2)\n",
-    "  print(\"Object type:\", class_id)\n",
-    "  print(\"Coordinates:\", cords)\n",
-    "  print(\"Probability:\", conf)\n",
-    "  print(\"---\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Count the amount of people in the image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "QKiyGYRff6OT",
-    "outputId": "8a00e147-7243-4c7e-909a-aaffaea1919f"
-   },
-   "outputs": [],
-   "source": [
-    "num_attendees = 0\n",
-    "for box in result.boxes:\n",
-    "  #print(box.cls[0].item())\n",
-    "  if box.cls[0].item() in [0]:\n",
-    "    num_attendees += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import Markdown, display\n",
-    "display(Markdown(\"# Number of people: \" + str(num_attendees)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<H3>Thanks for joining our session. Enjoy DTW 2024!!</div>"
-   ]
-  }
- ],
- "metadata": {
-  "colab": {
-   "provenance": []
-  },
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 4
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
